# hpsvm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  bench.sh  context7.json
.github/workflows/: ci.yml  release.yml
crates/fork-rpc/: Cargo.toml
crates/fork-rpc/src/: lib.rs
crates/fork-rpc/tests/: rpc_fork.rs
crates/hpsvm/: Cargo.toml
crates/hpsvm-fixture/: Cargo.toml  build.rs
crates/hpsvm-fixture-fd/: Cargo.toml
crates/hpsvm-fixture-fd/src/: error.rs  lib.rs
crates/hpsvm-fixture-fd/tests/: adapter.rs
crates/hpsvm-fixture/src/: bench_error.rs  binary.rs  capture.rs  check.rs  compare.rs  config.rs  error.rs  fd.rs  json.rs  lib.rs  matrix.rs  model.rs  report.rs  runner.rs  single.rs  snapshot.rs
crates/hpsvm-fixture/tests/: benchers.rs  bin_roundtrip.rs  checks.rs  compare.rs  fd_adapter.rs  json_roundtrip.rs  runner.rs  snapshot.rs
crates/hpsvm/benches/: core_interfaces.rs  hashing.rs  max_perf.rs  simple_bench.rs
crates/hpsvm/benches/common/: mod.rs
crates/hpsvm/src/: account_source.rs  accounts_db.rs  batch.rs  builder.rs  callback.rs  commit.rs  env.rs  error.rs  execution.rs  format_logs.rs  helpers.rs  history.rs  inspector.rs  instruction.rs  lib.rs  loader.rs  message_processor.rs  precompiles.rs  register_tracing.rs  runtime_registry.rs  types.rs
crates/hpsvm/src/programs/: mod.rs
crates/hpsvm/src/token/: accounts.rs  approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  create_account.rs  create_ata.rs  create_ata_idempotent.rs  create_mint.rs  create_multisig.rs  create_native_mint.rs  create_native_mint_2022.rs  error.rs  freeze_account.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs
crates/hpsvm/src/utils/: inner_instructions.rs  mod.rs  rent.rs  serde_with_str.rs
crates/hpsvm/test_programs/: Cargo.toml
crates/hpsvm/test_programs/clock-example/: Cargo.toml
crates/hpsvm/test_programs/counter/: Cargo.toml
crates/hpsvm/test_programs/custom-syscall/: Cargo.toml
crates/hpsvm/test_programs/custom-syscall/src/: lib.rs
crates/hpsvm/test_programs/failure/: Cargo.toml
crates/hpsvm/tests/: account_locks.rs  account_source.rs  accounts_view.rs  bdd.rs  blockhash.rs  builder.rs  compute_budget.rs  config_program.rs  counter_test.rs  custom_syscall.rs  env_config.rs  execution_outcome.rs  feature_accounts.rs  fees.rs  inspector.rs  instruction_api.rs  instruction_case.rs  loader.rs  parsing.rs  precompiles.rs  pubkey_signer.rs  register_trace_metrics.rs  spl.rs  stake_program.rs  system.rs  test_dflow_load.rs  token_account_factories.rs  token_freeze.rs  token_multisig.rs  token_native_mint.rs  token_one_owner.rs  transaction_batch.rs  tx_history.rs  upgradeable_loader.rs
crates/hpsvm/tests/programs_bytes/: mod.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/loader/tests/: loader.rs
crates/token/: Cargo.toml
crates/token/src/: accounts.rs  approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  create_account.rs  create_ata.rs  create_ata_idempotent.rs  create_mint.rs  create_multisig.rs  create_native_mint.rs  create_native_mint_2022.rs  error.rs  freeze_account.rs  lib.rs  mint_to.rs  mint_to_checked.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs
crates/token/tests/: account_factories.rs  freeze.rs  multisig.rs  native_mint.rs  one_owner.rs
docs/benchmarks/baselines/: core_interfaces.json  max_perf.json
docs/benchmarks/runtime-baselines/: core_interfaces.json  max_perf.json  simple_bench.json
docs/superpowers/plans/: 2026-04-28-hpsvm-core-architecture.md  2026-04-30-hpsvm-product-layer-phase1.md
docs/superpowers/specs/: 2026-04-29-hpsvm-mollusk-absorption-design.md
features/: feature_set_reconfiguration.feature  fee_payer.feature  instruction_first_execution.feature  transaction_errors.feature
scripts/: criterion_compare.py  criterion_export.py  hotpath_compare.py
specs/: README.md  context.md
specs/2026-06-17-01-quick-wins/: design.md  tasks.md
specs/2026-06-17-01-quick-wins/features/: quick-wins.feature
specs/2026-06-17-02-performance/: design.md  tasks.md
specs/2026-06-17-02-performance/features/: performance.feature
specs/2026-06-17-03-test-coverage/: design.md  tasks.md
specs/2026-06-17-03-test-coverage/features/: test-coverage.feature
specs/2026-06-17-04-code-quality/: design.md  tasks.md
specs/2026-06-17-04-code-quality/features/: code-quality.feature
