[workspace]
resolver = "3"
members = ["bin/*", "crates/*"]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/longcipher/hpsvm"

[workspace.dependencies]
# local crates
hpsvm = { path = "crates/hpsvm", version = "0.1.3" }
hpsvm-fixture = { path = "crates/hpsvm-fixture", version = "0.1.3" }
hpsvm-fixture-fd = { path = "crates/hpsvm-fixture-fd", version = "0.1.3" }

# external crates
agave-feature-set = "3.1.14"
agave-precompiles = "3.1.14"
agave-reserved-account-keys = "3.1.14"
agave-syscalls = "3.1.14"
ansi_term = "0.12.1"
bincode = "1.3.3"
clap = "4.6.1"
criterion = "0.8.2"
cucumber = "0.23.0"
ed25519-dalek = "=1.0.1"
hashbrown = "0.17.0"
hex = "0.4.3"
hotpath = "0.15.1"
indexmap = "2.14.0"
itertools = "0.14.0"
libsecp256k1 = "0.7.2"
mollusk-svm-fuzz-fixture-firedancer = "0.12.1-agave-4.0"
parking_lot = "0.12.5"
prost = "0.14"
qualifier_attr = "0.2.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
smallvec = "1.15.1"
solana-account = "3.4.0"
solana-address = "2.6.0"
solana-address-lookup-table-interface = "3.1.0"
solana-bpf-loader-program = "3.1.14"
solana-builtins = "3.1.14"
solana-clock = "3.0.1"
solana-compute-budget = "3.1.14"
solana-compute-budget-instruction = "3.1.14"
solana-compute-budget-interface = "3.0.0"
solana-config-interface = "2.0.0"
solana-ed25519-program = "3.0.0"
solana-epoch-rewards = "3.0.1"
solana-epoch-schedule = "3.1.0"
solana-feature-gate-interface = "3.1.0"
solana-fee = "3.1.14"
solana-fee-structure = "3.0.0"
solana-hash = "3.1.0"
solana-instruction = "3.4.0"
solana-instructions-sysvar = "3.0.0"
solana-keypair = "3.1.2"
solana-last-restart-slot = "3.0.0"
solana-loader-v3-interface = "7.0.0"
solana-loader-v4-interface = "3.1.0"
solana-message = "3.1.0"
solana-native-token = "3.0.0"
solana-nonce = "3.2.0"
solana-nonce-account = "3.0.0"
solana-precompile-error = "3.0.0"
solana-program-error = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-program-runtime = "3.1.14"
solana-rent = "3.1.0"
solana-rpc-client = "3.1.14"
solana-rpc-client-api = "3.1.14"
solana-sdk-ids = "3.1.0"
solana-secp256k1-program = "3.0.1"
solana-sha256-hasher = "3.1.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-slot-hashes = "3.0.1"
solana-slot-history = "3.0.0"
solana-stake-interface = "2.0.2"
solana-svm-callback = "3.1.14"
solana-svm-log-collector = "3.1.14"
solana-svm-timings = "3.1.14"
solana-svm-transaction = "3.1.14"
solana-system-interface = "3.2.0"
solana-system-program = "3.1.14"
solana-sysvar = "3.1.1"
solana-sysvar-id = "3.1.0"
solana-transaction = "3.1.0"
solana-transaction-context = "3.1.14"
solana-transaction-error = "3.2.0"
solana-vote-interface = "5.1.1"
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "2.1.0"
spl-token-interface = "2.0.0"
test-log = "0.2.20"
thiserror = "2.0.18"
tokio = "1.52.2"
tracing = "0.1.44"

[workspace.lints.clippy]
# Enable pedantic lints for stricter code quality
# Priority -1 so individual lint settings override
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides - these are too noisy or don't fit this codebase
missing_errors_doc = "allow"        # Requires extensive documentation work
missing_panics_doc = "allow"        # Requires extensive documentation work
must_use_candidate = "allow"        # Very noisy, too subjective
doc_markdown = "allow"              # Backticks in docs - low value for effort
similar_names = "allow"             # Often false positives
too_many_lines = "allow"            # Subjective function length
module_name_repetitions = "allow"   # FooModule::Foo patterns are common and fine
struct_excessive_bools = "allow"    # Sometimes structs legitimately need multiple bools
fn_params_excessive_bools = "allow" # Sometimes functions legitimately need multiple bools
items_after_statements = "allow"    # Style preference, not harmful
uninlined_format_args = "allow"     # format!("{}", x) vs format!("{x}") is minor
return_self_not_must_use = "allow"  # Builder pattern returns

# Cast lints - many false positives in contexts where values are known to be in range
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Note: cast_lossless is NOT allowed - prefer From::from() for clarity
# Default::default() vs TypeName::default() is a style preference
default_trait_access = "allow"
# Some async functions don't await but are async for API consistency or future use
unused_async = "allow"
# &Option<T> vs Option<&T> - sometimes &Option is intentional
ref_option_ref = "allow"
ref_option = "allow"
# Appending format! to String - push_str with format is equivalent
format_push_string = "allow"
# Case-sensitive extension comparison is often intentional
case_sensitive_file_extension_comparisons = "allow"
# Unnecessary wrapping in Result - sometimes for API consistency
unnecessary_wraps = "allow"
# Passing by value when not consumed - often cleaner API design
needless_pass_by_value = "allow"
# Large types passed by value - builder pattern and ownership transfer
large_types_passed_by_value = "allow"
# Small Copy types by reference - often for API consistency
trivially_copy_pass_by_ref = "allow"
# Underscore-prefixed bindings - used for documentation or future use
no_effect_underscore_binding = "allow"
# Closure vs method reference - closure syntax is clearer: .map(|s| s.to_string())
redundant_closure_for_method_calls = "allow"

# Panic safety - deny any operations that could panic
unwrap_used = "deny"
expect_used = "allow"  # Allow expect in test framework where infallible operations are expected
panic = "allow"  # Allow panic in test framework for legitimate error handling
 # Allow deprecated items - test framework may need to support older APIs# Note: indexing_slicing lint is too strict and flags many safe uses# Instead, we rely on careful code review and bounds checking
# Prohibit all allow attributes - no exceptions
allow_attributes = "deny"

# Allow large error types - error types need rich context for good UX
result_large_err = "allow"

# No debug macros in production code
dbg_macro = "deny"

# No incomplete code markers
todo = "deny"
unimplemented = "deny"

# Use tracing instead of println/eprintln in library code
# CLI crates override this via #![allow(...)] in lib.rs/main.rs
print_stdout = "deny"
print_stderr = "deny"

# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"
deprecated = "allow"

[workspace.lints.rustdoc]
all = "warn"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
