[package]
name = "hpsvm-fixture-fd"
description = "Firedancer-format fixture adapters for hpsvm"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["prost-codec"]
prost-codec = []
serde = ["dep:serde"]

[dependencies]
hpsvm-fixture.workspace = true
mollusk-svm-fuzz-fixture-firedancer.workspace = true
prost.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json.workspace = true
solana-address.workspace = true
thiserror.workspace = true

[lints]
workspace = true
