[package]
name = "hpsvm-fixture-fd"
description = "Firedancer-format fixture adapters for hpsvm"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["prost-codec"]
json-codec = ["dep:serde_json"]
prost-codec = []
serde = ["dep:serde"]

[dependencies]
hpsvm-fixture = { workspace = true, default-features = false, features = ["instruction-fixture"] }
mollusk-svm-fuzz-fixture-firedancer.workspace = true
prost.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
solana-address.workspace = true
thiserror.workspace = true

[lints]
workspace = true
