[package]
name = "hpsvm-fixture"
description = "Transaction-first fixture capture and replay for hpsvm"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["bin-codec", "json-codec", "markdown"]
serde = ["dep:serde"]
bin-codec = ["dep:wincode", "serde"]
json-codec = ["dep:serde_json", "serde"]
instruction-fixture = []
markdown = []

[dependencies]
hpsvm.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
solana-account.workspace = true
solana-address.workspace = true
solana-message.workspace = true
solana-rent.workspace = true
solana-transaction = { workspace = true, features = ["wincode"] }
solana-transaction-context.workspace = true
solana-transaction-error.workspace = true
thiserror.workspace = true
wincode = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
solana-account.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-sdk-ids.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction.workspace = true

[lints]
workspace = true
