[package]
name = "hpsvm"
description = "A fast and lightweight Solana VM simulator for testing solana programs"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
readme = "../../README.md"
include = ["src/**/*", "elf/**/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
internal-test = []
invocation-inspect-callback = []
nodejs-internal = ["dep:qualifier_attr"]
hashbrown = ["dep:hashbrown"]
serde = []
precompiles = ["dep:agave-precompiles"]
register-tracing = ["invocation-inspect-callback", "dep:hex", "dep:sha2", "dep:serde_json"]
hotpath = ["dep:hotpath"]
# Allocation profiling on top of `hotpath`; attributes every allocation to the
# calling instrumented function. Implies `hotpath`.
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
# Loader v3 helpers (set_upgrade_authority, deploy_upgradeable_program).
loader = []
# SPL token operation helpers (transfer, mint, ATA, freeze, etc.).
# `spl-token-interface` is always available because helpers.rs relies on it
# for token balance diagnostics.
token = [
    "dep:spl-associated-token-account-interface",
    "dep:solana-program-option",
]
# SPL token-2022 extensions; implies `token`.
token-2022 = ["token", "dep:spl-token-2022-interface"]

[dependencies]
agave-feature-set.workspace = true
agave-precompiles = { workspace = true, optional = true, features = [
    "agave-unstable-api",
] }
agave-reserved-account-keys = { workspace = true, features = [
    "agave-unstable-api",
] }
hashbrown = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
hotpath = { workspace = true, optional = true, features = ["hotpath"] }
lru.workspace = true
nu-ansi-term.workspace = true
parking_lot.workspace = true
qualifier_attr = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
smallvec.workspace = true
solana-account.workspace = true
solana-address.workspace = true
solana-address-lookup-table-interface = { workspace = true, features = ["wincode", "bytemuck"] }
solana-builtins = { workspace = true, features = ["agave-unstable-api"] }
solana-clock.workspace = true
solana-compute-budget.workspace = true
solana-compute-budget-instruction = { workspace = true, features = [
    "agave-unstable-api",
] }
solana-epoch-rewards.workspace = true
solana-epoch-schedule.workspace = true
solana-feature-gate-interface = { workspace = true, features = ["bincode"] }
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-fee-structure.workspace = true
solana-hash.workspace = true
solana-instruction.workspace = true
solana-instructions-sysvar.workspace = true
solana-keypair.workspace = true
solana-last-restart-slot.workspace = true
solana-loader-v3-interface = { workspace = true, features = ["serde", "wincode"] }
solana-loader-v4-interface.workspace = true
solana-message.workspace = true
solana-native-token.workspace = true
solana-nonce.workspace = true
solana-nonce-account.workspace = true
solana-precompile-error.workspace = true
solana-program-error.workspace = true
solana-program-option = { workspace = true, optional = true }
solana-program-pack.workspace = true
solana-program-runtime.workspace = true
solana-rent.workspace = true
solana-sdk-ids.workspace = true
solana-sha256-hasher.workspace = true
solana-signature = { workspace = true, features = ["serde"] }
solana-signer.workspace = true
solana-slot-hashes.workspace = true
solana-slot-history.workspace = true
solana-stake-interface = { workspace = true, features = ["sysvar", "wincode"] }
solana-svm-callback.workspace = true
solana-svm-log-collector.workspace = true
solana-svm-timings.workspace = true
solana-svm-transaction.workspace = true
solana-syscalls.workspace = true
solana-system-interface.workspace = true
solana-system-program.workspace = true
solana-sysvar.workspace = true
solana-sysvar-id.workspace = true
solana-transaction = { workspace = true, features = ["verify", "wincode"] }
solana-transaction-context = { workspace = true, features = ["wincode"] }
solana-transaction-error.workspace = true
spl-associated-token-account-interface = { workspace = true, optional = true }
spl-token-2022-interface = { workspace = true, optional = true }
spl-token-interface.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
cucumber.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
serde.workspace = true
solana-clock.workspace = true
solana-compute-budget-interface.workspace = true
solana-config-interface = { workspace = true, features = ["bincode"] }
solana-ed25519-program.workspace = true
solana-keypair.workspace = true
solana-program-option.workspace = true
solana-program-pack.workspace = true
solana-secp256k1-program = { workspace = true, features = ["bincode"] }
solana-signer.workspace = true
solana-stake-interface = { workspace = true, features = ["bincode"] }
solana-vote-interface = { workspace = true, features = ["wincode"] }
spl-associated-token-account-interface.workspace = true
spl-token-interface.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
rust.dead_code = "allow"
clippy.allow_attributes = "warn"

[[test]]
name = "precompiles"
required-features = ["precompiles"]

[[test]]
name = "loader"
required-features = ["loader"]

[[test]]
name = "token_account_factories"
required-features = ["token"]

[[test]]
name = "token_freeze"
required-features = ["token"]

[[test]]
name = "token_multisig"
required-features = ["token"]

[[test]]
name = "token_native_mint"
required-features = ["token", "token-2022"]

[[test]]
name = "token_one_owner"
required-features = ["token"]

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "max_perf"
harness = false

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "core_interfaces"
harness = false
