[package]
name = "hpsvm-loader"
description = "Helpers for working with bpf_loader and HPSVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hpsvm = { workspace = true }
solana-address.workspace = true
solana-keypair.workspace = true
solana-loader-v3-interface = { workspace = true, features = ["bincode"] }
solana-signer.workspace = true
solana-transaction.workspace = true

[dev-dependencies]
agave-feature-set.workspace = true
solana-instruction.workspace = true
solana-message.workspace = true
test-log.workspace = true

[lints]
workspace = true
