[package]
name = "failure"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []

[dependencies]
solana-account-info.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-pubkey.workspace = true
